--- a/app/scss/general/variabls.scss
+++ b/app/scss/general/variabls.scss
@@ -1,2 +1,10 @@
+$desctop: 1439px;
+$tablet: 767px;
+
+
 $color: #000000;
 $bg-c: #ffffff;
+$bg-header-top: #FED600;
+$logo-text: #F60007;
+$color-form: #D2001C;
+$color-btn: #222222;
