--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,3 +5,6 @@
 @import "./general/global";
 
 @import "./blocks/header";
+@import "./elements/city";
+@import "./elements/social";
+@import "./elements/nav";
