--- a/app/scss/general/global.scss
+++ b/app/scss/general/global.scss
@@ -8,12 +8,17 @@ html {
   color: $color;
  
 /*
-  font-family: 'OpenSans-SemiBold', Arial, sans-serif;
-  font-family: 'OpenSans-Bold', Arial, sans-serif;
-  font-family: 'SF-Display-Regular', Arial, sans-serif;
-  font-family: 'SF-Text-Medium', Arial, sans-serif;
+600
+font-family: 'OpenSans-SemiBold', Arial, sans-serif;
+700
+font-family: 'OpenSans-Bold', Arial, sans-serif;
+
+font-family: 'SF-Display-Regular', Arial, sans-serif;
+
+font-family: 'SF-Text-Medium', Arial, sans-serif;
 */
   
+//400
   font-family: 'OpenSans-Regular', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -51,13 +56,15 @@ a {
 img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 button {
   cursor: pointer;
   background: transparent;
   border: none;
+  padding: 0;
+  margin: 0;
 }
 
 h1, h2, h3 {
@@ -67,3 +74,19 @@ h1, h2, h3 {
 p {
   margin: 0;
 }
+
+
+@mixin hover() {
+  transition: 0.3s;
+  &:hover {
+    transition: 0.3s;
+    color: $color-form;
+  }
+ }
+ 
+
+/*
+  @media (max-width: $tablet) {
+    padding: 19px 40px;
+  }
+*/
