--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -1,6 +1,7 @@
 .header {
   margin: 12px auto 0;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  z-index: 1;
 
   @media (max-width: $desctop) {
     padding: 0 10px;
@@ -331,7 +332,7 @@
 
     @media (max-width: $tablet) {
       display: flex;
-      padding: 1px 20px 1px 3px;
+      padding: 1px 50px;
       margin: 0 auto;
       font-family: 'OpenSans-Bold', Arial, sans-serif;
       font-style: normal;
