--- a/app/scss/blocks/info.scss
+++ b/app/scss/blocks/info.scss
@@ -29,7 +29,7 @@
     }
 
     @media (max-width: $tablet) {
-      padding: 0 20px;
+      padding: 15px 20px;
     }
   }
 
@@ -100,7 +100,6 @@
 
     @media (max-width: $tablet) {
       margin-top: 10px;
-
     }
   }
 
@@ -131,6 +130,7 @@
     font-size: 16px;
     line-height: 19px;
     margin-bottom: 20px;
+
     a {
       color: $color-form;
       text-decoration: underline;
