--- a/app/css/style.css
+++ b/app/css/style.css
@@ -351,16 +351,6 @@ html {
           box-sizing: border-box;
   position: relative;
   color: #000000;
-  /*
-600
-font-family: 'OpenSans-SemiBold', Arial, sans-serif;
-700
-font-family: 'OpenSans-Bold', Arial, sans-serif;
-
-font-family: 'SF-Display-Regular', Arial, sans-serif;
-
-font-family: 'SF-Text-Medium', Arial, sans-serif;
-*/
   font-family: 'OpenSans-Regular', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -381,7 +371,8 @@ body {
   clip: rect(1px, 1px, 1px, 1px);
   overflow: hidden; }
 
-ul, li {
+ul,
+li {
   margin: 0;
   padding: 0;
   list-style-type: none; }
@@ -403,17 +394,14 @@ button {
   padding: 0;
   margin: 0; }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   margin: 0; }
 
 p {
   margin: 0; }
 
-/*
-  @media (max-width: $tablet) {
-    padding: 19px 40px;
-  }
-*/
 .header {
   margin: 12px auto 0;
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
