--- a/app/css/style.css
+++ b/app/css/style.css
@@ -404,15 +404,16 @@ p {
 
 .header {
   margin: 12px auto 0;
+  padding-bottom: 15px;
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   z-index: 1; }
   @media (max-width: 1439px) {
     .header {
-      padding: 0 10px; } }
+      padding: 0 10px 15px; } }
   @media (max-width: 767px) {
     .header {
-      padding: 0;
+      padding: 0 0 15px 0;
       margin: 0; } }
   .header__wrapper {
     margin: 0 auto;
@@ -1061,12 +1062,14 @@ p {
     width: auto;
     padding: 10px;
     min-width: 150px;
-    z-index: 10; }
+    z-index: 10;
+    height: auto; }
 
 .nav__sub-list {
   position: absolute;
   visibility: hidden;
   opacity: 0;
+  height: 0;
   left: -100vw;
   background: #ffffff;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -1098,6 +1101,7 @@ p {
     .nav__item:hover .nav__sub-list {
       position: absolute;
       visibility: hidden;
+      height: 0;
       opacity: 0;
       -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -1142,12 +1146,12 @@ p {
         min-width: 150px; } }
 
 .info__wrapper {
-  padding-top: 70px;
+  padding-top: 55px;
   max-width: 1440px;
   margin: 0 auto; }
   @media (max-width: 767px) {
     .info__wrapper {
-      padding-top: 20px; } }
+      padding-top: 5px; } }
 
 .info__wrapper__img {
   margin: 0 auto;
