--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -1,14 +1,15 @@
 .header {
   margin: 12px auto 0;
+  padding-bottom: 15px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   z-index: 1;
 
   @media (max-width: $desctop) {
-    padding: 0 10px;
+    padding: 0 10px 15px;
   }
 
   @media (max-width: $tablet) {
-    padding: 0;
+    padding: 0 0 15px 0;
     margin: 0;
   }
 
