--- a/app/scss/elements/nav.scss
+++ b/app/scss/elements/nav.scss
@@ -145,6 +145,7 @@
         padding: 10px;
         min-width: 150px;
         z-index: 10;
+        height: auto;
       }
     }
   }
@@ -153,6 +154,7 @@
     position: absolute;
     visibility: hidden;
     opacity: 0;
+    height: 0;
     left: -100vw;
     background: $bg-c;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -189,6 +191,7 @@
         .nav__sub-list {
           position: absolute;
           visibility: hidden;
+          height: 0;
           opacity: 0;
           -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
           box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
